--- a/src/css/scss/layout/_layout.scss
+++ b/src/css/scss/layout/_layout.scss
@@ -7,7 +7,6 @@
  */
 .l {
 	max-width: $l-max-width;
-	margin: 0 auto;
 	padding: 1rem;
 }
 
